components/PageTitle/PageTitle.module.scss
.background {
    @include full-width;
}

.container {
    @include container;

    padding: $spacing-8 0 0;

    @include mobile-only {
        padding: $spacing-5 0 0;
    }
}

.title {
    @include heading-1;

    margin-top: 0;
    color: $color-base-700;

    &:only-child {
        margin-bottom: 0;
    }
}

.subtitle {
    @include paragraph;

    max-width: 735px;
    margin: 0;
}

